# Momentarise

./: .gitignore  README.md  celery.md  docker-compose.yml  download.html  package-lock.json  package.json  part_conv.md  pnpm-lock.yaml  render.yaml  tmp_env_vars.json  vercel.json  vercel_env.json
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  sync_backfill_events.md
apps/api/alembic/: env.py
apps/api/alembic/versions/: 344603a90010_add_calendar_recurrence_fields.py  3c9a7b1e8d42_add_event_details_fields.py  4daa52d54088_add_inbox_captures_and_item_blocks.py  7a9c5b4d1e2f_add_event_color_and_calendar_preferences.py  9e6b8caa1f2d_set_inbox_capture_source_default.py  a9b8c7d6e5f4_add_event_content_snapshots.py  b8c1d2e3f4a5_add_sync_runtime_and_agents_automations.py  ba758d0eff25_initial_schema.py  c6d5f7a1b2c3_harden_events_integrity_and_indexes.py  cf948fc7bfb0_add_items_events.py  d1e8a2b3c4f5_events_defaults_and_constraints.py  d471c08500f9_add_projects_and_series_tables.py  d4f1e9a7c3b2_add_capture_pipeline_and_ai_preferences.py  e8b7c9d0f1a2_add_capture_queue_outbox_and_run_id.py  f4b6c9d3e2a1_slice3_v2_capture_linking.py  (+1 more)
apps/api/src/: main.py  seed.py
apps/api/tests/: test_capture_ai_service.py  test_capture_async_queue.py  test_capture_pipeline_suggestions.py  test_capture_subagent_runtime.py  test_event_contracts.py  test_inbox_hotfix.py  test_litellm_client.py  test_model_registry.py  test_preferences_ai_channels.py  test_sync_event_schemas.py  test_sync_mutation_engine.py  test_sync_orchestrator.py  test_system_prompt.py
(+500 files in other folders)
