[project]
name = "api"
version = "0.1.0"
description = "Momentarise Life OS — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "celery",
    "redis",
    "pydantic[email]",
    "pydantic-settings",
    "pyjwt",
    "bcrypt",
    "python-multipart",
    "httpx",
]

[tool.ruff]
target-version = "py312"
line-length = 100
